--- a/subnotes/ln09.tex
+++ b/subnotes/ln09.tex
@@ -1,2 +1,20 @@
-\chapter{Linear Systems and Its States}
+\chapter{Linear Systems}
+Hello
+
+\section{Definition of Linear Systems}
+Hello
+
+\subsection{Impulse Response}
+Hello
+
+\section{One-dimensional SISO Systems}
+Hello
+
+\section{Multidimensional SISO Systems}
+Hello
+
+\section{Multidimensional MIMO Systems}
+Hello
+
+\section{Linear Input-output Function}
 Hello
