--- a/subnotes/ln10.tex
+++ b/subnotes/ln10.tex
@@ -1,2 +1,23 @@
 \chapter{It's Time to Get a Little Complex}
 Hello
+
+\section{Review of Imaginary Numbers}
+\subsection{Definition of Imaginary Numbers}
+Hello
+
+\subsection{Arithmetics of Imaginary Numbers}
+Hello
+
+\section{Review of Complex Numbers}
+\subsection{Definition of Complex Numbers}
+Hello
+
+\subsection{Arithmetics of Complex Numbers}
+Hello
+
+\section{Trigonometric Representation of Complex Numbers}
+\subsection{Exponentials}
+Hello
+
+\subsection{Polar Coordinates}
+Hello
