--- a/subnotes/ln11.tex
+++ b/subnotes/ln11.tex
@@ -1,2 +1,13 @@
 \chapter{Frequency, Phase, Domain}
-Hello
+
+\section{Frequency Decomposition}
+Hello.
+
+\section{Phase}
+Hello.
+
+\section{Spatial Frequency}
+Hello.
+
+\section{Periodic and Finite Signals}
+Hello.
