--- a/subnotes/ln12.tex
+++ b/subnotes/ln12.tex
@@ -1,2 +1,23 @@
 \chapter{Fourier Expansion: Infinite Terms}
+
+\section{Fourier Series}
+\subsection{Purpose and Definition}
+Hello
+
+\subsection{Fourier Series Approximation and Convergence}
+Hello
+
+\subsection{Uniqueness of Fourier Series}
+Hello
+
+\subsection{Approximations to Images}
+Hello
+
+\section{Discrete-time Signals}
+Hello
+
+\subsection{Periodicity}
+Hello
+
+\subsection{Discrete-Time Fourier Series}
 Hello
