--- a/subnotes/ln13.tex
+++ b/subnotes/ln13.tex
@@ -1,2 +1,10 @@
 \chapter{Linear Time-Invariant Systems}
+
+\section{Time Invariance}
+Hello
+
+\section{Linearity of System}
+Hello
+
+\section{Linearity and Time-Invariance}
 Hello
