--- a/subnotes/ln14.tex
+++ b/subnotes/ln14.tex
@@ -1,2 +1,24 @@
 \chapter{Frequency Response and Fourier Series}
+
+\section{Finding and Using Frequency Response}
+\subsection{Introduction}
+Hi
+
+\subsection{Linear Difference and Differential Equations}
+Hi
+
+\subsection{Fourier Series with Complex Exponentials}
+Hi
+
+\subsection{Solving Coefficients of Fourier Series}
+Hello
+
+\subsection{Frequency Response and Fourier Series}
+Hello
+
+\section{Frequency Response of Composite Systems}
+\subsection{Cascade Connection}
+Hello
+
+\subsection{Feedback Connection}
 Hello
