--- a/subnotes/ln16.tex
+++ b/subnotes/ln16.tex
@@ -1,2 +1,28 @@
 \chapter{Impulse Resopnse Filters}
+
+\section{Causality}
+Hi
+
+\section{Finite Impulse Response Filters}
+\subsection{Definition of FIR Filters}
+Hello
+
+\subsection{Design of FIR Filters}
+Hello
+
+\subsection{Decibels}
+Hello
+
+\section{Infinite Impulse Response Filters}
+\subsection{Definition of IIR Filters}
+Hello
+
+\subsection{Design of IIR Filters}
+Hello
+
+\section{Implementation of Impulse Response Filters}
+\subsection{Fundamental Policies and Terminologies}
+Hello
+
+\subsection{Signal Flow Graphs}
 Hello
