--- a/subnotes/ln17.tex
+++ b/subnotes/ln17.tex
@@ -1,2 +1,10 @@
 \chapter{The Four Fourier Transforms, Part I}
+
+\section*{Notations}
+Hello
+
+\section{Continuous-Time Fourier Series}
+Hello
+
+\section{Discrete Fourier Transform}
 Hello
