--- a/subnotes/ln18.tex
+++ b/subnotes/ln18.tex
@@ -1,2 +1,7 @@
 \chapter{The Four Fourier Transforms, Part II}
+
+\section{Discrete-Time Fourier Transform}
+Hello
+
+\section{Continuous-Time Fourier Transform}
 Hello
