--- a/subnotes/ln19.tex
+++ b/subnotes/ln19.tex
@@ -1,2 +1,7 @@
-\chapter{Fourier Transform vs. Fourier Series}
+\chapter{A Discussion of Fourier Transform}
+
+\section{Fourier Transform vs. Fourier Series}
+Hello
+
+\section{Properties of Fourier Transform}
 Hello
