--- a/subnotes/ln20.tex
+++ b/subnotes/ln20.tex
@@ -1,2 +1,18 @@
 \chapter{Sampling and Reconstruction}
+
+\section{Sampling}
+\subsection{Sampling and Aliasing}
+Hello
+
+\subsection{Perceived Pitch Experiment}
+Hello
+
+\subsection{Aliasing Ambiguities}
+Hello
+
+\section{Reconstruction}
+\subsection{Survey and Introduction}
+Hello
+
+\subsection{Mathematical Assumptions of Reconstruction}
 Hello
