--- a/subnotes/old_ln01.tex
+++ b/subnotes/old_ln01.tex
@@ -1,2 +1,11 @@
 \chapter{The Fundamentals of Linear Algebra}
 Hello
+
+\section{Introduction to Linear Algebra}
+Hello
+
+\section{Vectors and Matrices}
+Hello
+
+\section{Linearity}
+Hello
