--- a/subnotes/old_ln02.tex
+++ b/subnotes/old_ln02.tex
@@ -1,2 +1,14 @@
 \chapter{Arithmetics of Vectors and Matrices}
 Hello
+
+\section{Addition and Subtraction}
+Hello
+
+\section{Matrix Multiplication}
+Hello
+
+\section{Inverse Matrices}
+Hello
+
+\section{Determinants}
+Hello
