--- a/subnotes/old_ln03.tex
+++ b/subnotes/old_ln03.tex
@@ -1,2 +1,11 @@
 \chapter{Gaussian Elimination}
 Hello
+
+\section{Linear Systems of Equations}
+Hello
+
+\section{Gaussian Elimination}
+Hello
+
+\section{Failure of Gaussian Elimination}
+Hello
