--- a/subnotes/old_ln04.tex
+++ b/subnotes/old_ln04.tex
@@ -1,2 +1,11 @@
 \chapter{Linear Dependence}
 Hello
+
+\section{Linear Independence and Linear Dependence}
+Hello
+
+\section{Geometric Interpretation}
+Hello
+
+\section{Rank}
+Hello
