--- a/subnotes/old_ln05.tex
+++ b/subnotes/old_ln05.tex
@@ -1,2 +1,14 @@
 \chapter{Vector Spaces}
 Hello
+
+\section{Definition of Vector Space}
+Hello
+
+\section{Subspaces}
+Hello
+
+\section{Columnspaces (Span)}
+Hello
+
+\section{Nullspaces (Kernel)}
+Hello
