--- a/subnotes/old_ln06.tex
+++ b/subnotes/old_ln06.tex
@@ -1,2 +1,11 @@
 \chapter{Eigen Show You The World: Eigenvalues, Eigenvectors, and Eigenpain}
+Hello % write about fixed point
+
+\section{Eigenvalues}
+Hello
+
+\section{Eigenvectors}
+Hello
+
+\section{Eigenspaces}
 Hello
