--- a/subnotes/old_ln07.tex
+++ b/subnotes/old_ln07.tex
@@ -1,2 +1,11 @@
 \chapter{Eigenspaces and Change of Basis}
 Hello
+
+\section{Cartesian Space and Basis}
+Hello
+
+\section{Change of Coordinate Axis}
+Hello
+
+\section{Change of Basis}
+Hello
