--- a/subnotes/old_ln09.tex
+++ b/subnotes/old_ln09.tex
@@ -1,2 +1,11 @@
 \chapter{Least Squares Algorithm: Where Machine Learning Starts}
 Hello
+
+\section{Overdetermined Systems}
+Hello
+
+\section{Estimation of Solutions for Overdetermined Systems}
+Hello
+
+\section{Summary of Least Squares Algorithm}
+Hello
