--- a/subnotes/ln21.tex
+++ b/subnotes/ln21.tex
@@ -1,2 +1,7 @@
 \chapter{The Nyquist-Shannon Sampling Theorem}
+
+\section{The Statement of Theorem}
+Hello
+
+\section{A Scratch of Its Proof}
 Hello
